--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			</header>
 			<section class="main">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
-				<label for="toggle-all"><Strong>Mark all as complete</Strong></label>
+				<label for="toggle-all">Mark all as complete</label>
 				<ul class="todo-list"></ul>
 			</section>
 			<footer class="footer">
@@ -23,7 +23,7 @@
 						<a href="#/" class="selected">All</a>
 					</li>
 					<li>
-						<a href="#/active">Active</a>
+						<a href="#/active"><strong>Active<strong></a>
 					</li>
 					<li>
 						<a href="#/completed">Completed</a>
