--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 					<li>
 						<a href="#/completed">Completed</a>
 					</li>
+					<li>
+						<a href="#/completed">Completed1</a>
+					</li>
 				</ul>
 				<button class="clear-completed">Clear completed</button>
 			</footer>
