Changed red color

--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
 						<a href="#/" class="selected">All</a>
 					</li>
 					<li>
-						<a href="#/active"><strong>Active<strong></a>
+						<a href="#/active">Active</a>
 					</li>
 					<li>
 						<a href="#/completed">Completed</a>
-					</li>
-					<li>
-						<a href="#/completed">Completed1</a>
 					</li>
 				</ul>
 				<button class="clear-completed">Clear completed</button>
