--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
 			<p>Refactored by <a href="https://github.com/cburgmer">Christoph Burgmer</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
+		<section class="todoapp-">
+			<header style="font-size::14px;">
+				<h1>What can this app do for you?</h1>
+				<li>Write, organize, and reprioritize your tasks more efficiently</li>
+				<li>Attach notes, links, and files to a task</li>
+				<li>See when someone else has completed a task</li>
+				<li>Ultimate productivity app</li>
+
+			</header>
+		</section>
 		<script src="js/helpers.js"></script>
 		<script src="js/store.js"></script>
 		<script src="js/model.js"></script>
