--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<section class="todoapp">
 			<header class="header">
-				<h1><b>todos</b></h1>
-				<h1><b>todos</b></h1>
+				<h1>todos</h1>
+	
 				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<section class="main">
